--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rainbow",
-  "version": "1.0.0",
+  "name": "bearded-robot-proto",
+  "version": "0.1.4",
   "dependencies": {
     "express": "~3.4.7"
   },
