--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "grunt-contrib-uglify": "~0.4.0"
   },
   "engines": {
-    "node": "*",
-    "npm": "*"
+    "node": "0.10.29"
   },
   "repository": { 
     "type" : "git",
