--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "grunt-svgmin": "~0.4.0",
     "grunt-contrib-uglify": "~0.4.0",
     "connect-livereload": "*",
-    "grunt-contrib-livereload": "8"
+    "grunt-contrib-livereload": "*"
   },
   "engines": {
     "node": "0.10.29"
