--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "express": "~3.4.7"
   },
   "devDependencies": {
-    "grunt": "~0.4.4",
+    "grunt": "*",
+    "grunt-cli": "*",
+    "grunt-contrib": "*",
+    "less": "*",
+    "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-less": "~0.11.0",
     "grunt-contrib-compass": "~0.8.0",
@@ -23,8 +27,7 @@
     "grunt-usemin": "~2.1.1",
     "grunt-concurrent": "~0.5.0",
     "load-grunt-tasks": "~0.4.0",
-    "grunt-svgmin": "~0.4.0",
-    "grunt-contrib-uglify": "~0.4.0"
+    "grunt-svgmin": "~0.4.0"
   },
   "engines": {
     "node": ">=0.10.0"
