--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "devDependencies": {
     "grunt": "*",
     "grunt-cli": "*",
-    "grunt-contrib": "*",
-    "less": "*",
+    "grunt-contrib-watch": "*",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-less": "~0.11.0",
@@ -30,8 +29,9 @@
     "grunt-svgmin": "~0.4.0",
     "grunt-contrib-uglify": "~0.4.0",
     "connect-livereload": "*",
-    "grunt-contrib-livereload": "*"
-  },
+    "grunt-contrib-livereload": "*",
+    "less": "*"
+},
   "engines": {
     "node": "0.10.29"
   },
