--- a/bower.json
+++ b/bower.json
@@ -16,15 +16,15 @@
     "composerJS",
     "HopStack"
   ],
-    "dependencies": {
+  "dependencies": {
     "jquery": "~2.1.1",
-    "angular": "~1.2.18",
-    "angular-resource": "~1.2.18",
-    "angular-cookies": "~1.2.18",
-    "angular-sanitize": "~1.2.18",
-    "angular-route": "~1.2.18",
-    "angular-animate": "~1.2.18",
-    "angular-touch": "~1.2.18",
+    "angular": "~1.3.0",
+    "angular-resource": "~1.3.0",
+    "angular-cookies": "~1.3.0",
+    "angular-sanitize": "~1.3.0",
+    "angular-route": "~1.3.0",
+    "angular-animate": "~1.3.0",
+    "angular-touch": "~1.3.0",
     "angular-mocks": ">=1.2.18",
     "angular-validator": ">=0.2.3",
     "font-awesome": "~4.1.0",
@@ -44,10 +44,21 @@
     "jquery-spinner": "~0.1.5",
     "angular-local-storage": "~0.0.5",
     "Repo.js": "*",
-    "google-code-prettify": "~1.0.1"
+    "google-code-prettify": "~1.0.1",
+    "raphael": "~2.1.2",
+    "ngmap": "~1.1.0",
+    "weather-icons": "~1.2.1",
+    "flot.tooltip": "~0.7.1",
+    "gauge.js": "~1.2.1",
+    "morris.js":"~0.5.0",
+    "jqvmap": null,
+    "flot": "~0.8.3",
+    "jquery.easy-pie-chart":"~2.1.4"
   },
   "resolutions": {
-    "intro.js": "~0.9.0"
+    "intro.js": "~0.9.0",
+    "angular": "1.3.0",
+    "jquery": "~2.1.1"
   },
   "devDependencies": {
     "twbs-bootstrap-sass": "~3.1.1",
@@ -61,5 +72,4 @@
     "bower_components",
     "test"
   ]
-
 }
