--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "grunt-concurrent": "~0.5.0",
     "load-grunt-tasks": "~0.4.0",
     "grunt-svgmin": "~0.4.0",
-    "grunt-contrib-livereload": "*",
+    "grunt-contrib-watch": "*",
     "less": "*",
     "grunt-karma": "~0.8.3",
     "karma": "~0.12.17",
