updated font-awesome in libs, re-adding libs to scm (gitignore changes)

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,4 @@ package.json.swp
 
 # Optional files & folders
 docs/
-lib/
+#lib/ # fedora - adding this back until we replace dependency on /lib...for yaboi
