--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "HopStack",
-  "version": "0.2.3",
+  "version": "1.0.3",
   "description": "A beautifully crafted application stack for software teams",
-  "homepage": "https://github.com/simflofy/composerJS",
+  "homepage": "https://github.com/beardandfedora/hopstack",
   "dependencies": {
     "express": "~3.4.7",
     "grunt": "*",
@@ -48,7 +48,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:beardandfedorara/composerJS.git"
+    "url": "git@github.com:beardandfedorara/hopstack.git"
   },
   "keywords": [
     "AngularJS",
@@ -65,11 +65,11 @@
   "contributors": [
     {
       "name": "Others",
-      "url": "https://github.com/simflofy/composerJS/graphs/contributors"
+      "url": "https://github.com/beardandfedora/hopstack/graphs/contributors"
     }
   ],
    "bugs": {
-    "url": "https://github.com/simflofy/composerJS/issues"
+    "url": "https://github.com/beardandfedora/hopstack/issues"
   }
 
 }
