--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "HopStack",
-  "version": "0.2.3",
+  "version": "1.2.6",
   "description": "A beautifully crafted application stack for software teams",
-  "homepage": "https://github.com/simflofy/composerJS",
+  "homepage": "https://github.com/BeardandFedora/HopStack",
   "dependencies": {
     "express": "~3.4.7",
     "grunt": "*",
@@ -41,22 +41,22 @@
     "karma-phantomjs-launcher": "~0.1.4"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "build": "grunt build"
   },
   "engines": {
     "node": "0.10.29"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:beardandfedorara/composerJS.git"
+    "url": "git@github.com:beardandfedora/hopstack.git"
   },
   "keywords": [
     "AngularJS",
     "CoffeeScript",
     "Jade",
     "AngularJS",
-    "Simflofy",
-    "composerJS"
+    "HopStack"
   ],
   "author": {
     "name": "Joel Serino",
@@ -65,11 +65,11 @@
   "contributors": [
     {
       "name": "Others",
-      "url": "https://github.com/simflofy/composerJS/graphs/contributors"
+      "url": "https://github.com/BeardandFedora/HopStack/graphs/contributors"
     }
   ],
    "bugs": {
-    "url": "https://github.com/simflofy/composerJS/issues"
+    "url": "https://github.com/BeardandFedora/HopStack/issues"
   }
 
 }
