--- a/bower.json
+++ b/bower.json
@@ -54,7 +54,8 @@
     "morris.js":"~0.5.0",
     "jqvmap": null,
     "flot": "~0.8.3",
-    "jquery.easy-pie-chart":"~2.1.4"
+    "jquery.easy-pie-chart":"~2.1.4",
+    "font-awesome": "~4.2.0"
   },
   "resolutions": {
     "intro.js": "~0.9.0",
@@ -70,7 +71,6 @@
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
     "test"
   ]
 }
