--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "karma-jasmine": "~0.1.5",
     "karma-phantomjs-launcher": "~0.1.4",
     "karma-firefox-launcher": "~0.1.3",
-    "karma-safari-launcher": "~0.1.1"
+    "karma-safari-launcher": "~0.1.1",
+    "grunt-font-awesome-vars": "~1.0.1"
   },
   "scripts": {
     "test": "grunt test",
@@ -69,7 +70,7 @@
       "url": "https://github.com/BeardandFedora/HopStack/graphs/contributors"
     }
   ],
-   "bugs": {
+  "bugs": {
     "url": "https://github.com/BeardandFedora/HopStack/issues"
   }
 }
